# Ymir

./: LICENSE  README.txt  pyproject.toml
Ymir/: config.py  main.py  version.py
Ymir/backend/: gacode.py  gkeyll.py  hermes3.py  tool.py
Ymir/backend/patch/: gacode.build.fftw.patch  gacode.build.gyro.patch  gacode.build.mpich.patch  gkeyll.build.mpich.patch  hermes3.build.python.patch
Ymir/command/: build.py  clean.py  info.py  sim.py  test.py
Ymir/simulation/gacode/: simulation.py
Ymir/simulation/gkeyll/: simulation.py
Ymir/simulation/hermes3/: simulation.py
tool/: ymir.toml
